<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="splash_title">Tic Tac Toe</string>
    <string name="choose_turn">Who should go first?</string>
    <string name="radio_computer">Phone</string>
    <string name="radio_human">Me</string>
    <string name="start_game">Start Game &#8594;</string>
    <string name="error_not_your_turn">It\'s not your turn!</string>
    <string name="error_invalid_move">Invalid move!</string>
    <string name="your_turn">Your Move</string>
    <string name="computer_turn">Phone is thinking&#8230;</string>
    <string name="rematch">Rematch &#8634;</string>
    <string name="you_win">You win!</string>
    <string name="you_lost">You lost!</string>
    <string name="tie">It\'s a tie!</string>
    <string name="game_is_over">Game is over!</string>

</resources>
