<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/splash_title"
            android:textColor="@color/splash_text_color"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/splash_options_wrapper"
            android:orientation="vertical"
            android:padding="40dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/choose_turn"
                android:textColor="@color/splash_text_color"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio_human"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_human"
                    android:textColor="@color/splash_text_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_computer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_computer"
                    android:textColor="@color/splash_text_color"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_outline_button_bg_selector"
                android:clickable="true"
                android:onClick="onStartGameClicked"
                android:paddingBottom="6dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="6dp"
                android:text="@string/start_game"
                android:textColor="@color/splash_text_color"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>